@@ -37,6 +37,9 @@ UpdateInfoBoxBearingDiff(InfoBoxData &data);
 void
 UpdateInfoBoxRadial(InfoBoxData &data);
 
+void
+UpdateInfoBoxRadialATC(InfoBoxData &data);
+
 class InfoBoxContentNextWaypoint : public InfoBoxContent
 {
 public:
