@@ -15,6 +15,7 @@ Version 6.6 - not yet released
   - new InfoBox style "Shaded" (#1852)
   - waypoint details button in target dialog (#1967)
   - show distance in radial InfoBox comment (#2577)
+  - new InfoBox with radial and distance in nautical miles (#2269)
 * tasks
   - MAT tasks (#563)
   - custom symmetric quadrant (#2125)
